# rust-upnp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  av_transport_v3.rs  content_directory_v4.rs  http.rs  lib.rs  magic.rs  media_server_v4.rs  rootDesc.xml  ssdp.rs  template.rs  test.rs  test_server.rs
device/: media_server_v4.rs  mod.rs
service/: content_directory_v4.rs  mod.rs
src/: connection_manager_v3.rs  content_dir.xml  content_directory_v4.rs  http.rs  lib.rs  magic.rs  media_server_v4.rs  result_item.rs  rootDesc.xml  ssdp.rs  template.rs  test_server.rs
xml_templates/: browse.xml  connection_manager.xml  rootDesc.xml  test_device.xml
